Fix overflow

--- a/styles/elements_styles.css
+++ b/styles/elements_styles.css
@@ -9,7 +9,6 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 #main {
@@ -36,7 +35,6 @@ tfoot:last-child td {
   img {
     height: 50px;
   }
-
   aside {
     justify-content: space-between;
   }
@@ -45,8 +43,13 @@ tfoot:last-child td {
 @media (min-width: 992px) {
   aside {
     height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
   }
-
+  main{
+    margin-left: 250px;
+  }
   nav {
     margin-top: 8rem;
   }
